# bc

./: .gitignore  TBox_Slick.mak  TBox_Slick.vpj  TBox_Slick.vpw  TBox_Slick.vpwhistu  TBox_Slick.vtg  bee.sln  readme.txt
cmake/: toolchain.linux-arm11.cmake
dep/nmealib/: Android.mk  CMakeLists.txt  Makefile  Makefile.inc  nmealib.sln  nmealib.vcxproj  nmealib.vcxproj.filters
dep/nmealib/include/nmealib/: context.h  generator.h  gpzda.h  info.h  sentence.h  util.h
dep/nmealib/samples/: Makefile
dep/nmealib/samples/generate/: CMakeLists.txt  Makefile  generate.vcxproj  main.c
dep/nmealib/samples/generator/: CMakeLists.txt  Makefile  generator.vcxproj  main.c
dep/nmealib/samples/math/: CMakeLists.txt  Makefile  main.c  math.vcxproj
dep/nmealib/samples/parse/: CMakeLists.txt  Makefile  main.c  parse.vcxproj
dep/nmealib/samples/parse_file/: CMakeLists.txt  Makefile  main.c  parse_file.vcxproj
dep/nmealib/samples/parse_serial/: CMakeLists.txt  Makefile  main.c  main.cpp  parse_serial.vcxproj  parse_serial.vcxproj.filters  wserial.cpp  wserial.h
dep/nmealib/samples/parse_serial/Debug/: parse_serial.pch
dep/nmealib/src/: generator.c  gpzda.c  info.c  sentence.c  util.c  validate.c
dep/nmealib/test/: sentence.c
dep/paho/: Android.mk  CMakeCache.txt  Makefile
dep/paho/Windows Build/MQTTVersion/: MQTTVersion.vcxproj
dep/paho/Windows Build/paho-mqtt3a/: paho-mqtt3a.vcxproj
dep/paho/Windows Build/paho-mqtt3as/: paho-mqtt3as.vcxproj
dep/paho/Windows Build/paho-mqtt3c/: paho-mqtt3c.vcxproj
dep/paho/Windows Build/paho-mqtt3cs/: paho-mqtt3cs.vcxproj
dep/paho/Windows Build/stdoutsub/: stdoutsub.vcxproj
dep/paho/Windows Build/stdoutsuba/: stdoutsuba.vcxproj
dep/paho/Windows Build/test2/: test2.vcxproj
dep/paho/Windows Build/test9/: test9.vcxproj
dep/paho/doc/: DoxyfileV3AsyncAPI  DoxyfileV3ClientAPI  DoxyfileV3ClientInternal
dep/paho/src/: Heap.c  Heap.h  LinkedList.c  LinkedList.h  Log.c  Log.h  MQTTAsync.c  MQTTPacket.c  MQTTPersistenceDefault.c  Socket.c  StackTrace.c  StackTrace.h  Thread.c  VersionInfo.h
foundationTest/: Android.mk  CMakeLists.txt  foundationTest.vcxproj  main.cpp
fundation/: Android.mk  CMakeLists.txt
fundation/src/cpp/: bcp.cpp  bcp_channel.cpp  bcp_comm.cpp  bcp_nmea.cpp  bcp_packet.cpp  bcp_serial.cpp  binary_formater.cpp  crc32.cpp
fundation/src/cpp/core/: Types.cpp
fundation/src/cpp/util/: Heap.cpp  LinkedList.cpp  Log.cpp  Pipe.cpp  Semaphore.cpp  SharedMemory.cpp  StackTrace.cpp  Thread.cpp  Timestamp.cpp  Tree.cpp
fundation/src/cpp/vicp/: bcp_vicp.cpp  bcp_vicp_packet.cpp  bcp_vicp_receiver.cpp  bcp_vicp_sender.cpp  bcp_vicp_slice.cpp  slice_proto.cpp
fundation/src/inc/: bcp.h  bcp_channel.h  bcp_comm.h  bcp_nmea.h  bcp_packet.h  bcp_serial.h  binary_formater.h  crc32.h  dep.h  fundation.h
fundation/src/inc/core/: Arch.h  Compiler.h  Make.h  Types.h
fundation/src/inc/util/: Heap.h  List.h  Log.h  Pipe.h  Semaphore.h  SharedMemory.h  StackTrace.h  Thread.h  Timer.h  Timestamp.h
fundation/src/inc/vicp/: bcp_vicp.h  bcp_vicp_packet.h  bcp_vicp_receiver.h  bcp_vicp_sender.h  bcp_vicp_slice.h  slice_proto.h
slick/: Mqtt.mak  Mqtt.vpj  Mqtt.vpw  Mqtt.vpwhistu  Mqtt.vtg  TBox.mak  TBox.vpj  TBox.vpwhistu  slick.vpwhistu
tbox/: Android.mk  CMakeLists.txt
tbox/console/: console.cbp  console.vcxproj  console.vcxproj.filters  dxmain.cpp  imgui_demo.cpp
tbox/dep/mpu6050/: Android.mk  main6050.cpp  main6050.h
tbox/src/android/: IVICPListener.cpp  IVICPListener.h  IVICPSystem.cpp  IVICPSystem.h  VICPClient.cpp  VICPClient.h  VICPSystem.cpp  VICPSystem.h  android_vicp.h
tbox/src/android/gps/: Android.mk  IVICPListener.cpp  IVICPListener.h  IVICPSystem.cpp  IVICPSystem.h  VICPClient.cpp  VICPClient.h  gps.c  gps_old.c  location.cpp  location.h  readme.txt
tbox/src/cpp/: Application.cpp  CanBus.cpp  CmdParser.h  Config.cpp  Config.h  Event.cpp  Mqtt.cpp  RunTime.cpp  Schedule.cpp  Task.cpp  Vehicle.cpp  bcp_packet.c  channels.cpp  crc32.c  dep.cpp  main.cpp  stdinout.cpp
tbox/src/inc/: Apparatus.h  Application.h  BCPReceiver.h  BCPSender.h  CanBus.h  Config.h  CycleQueue.h  Event.h  List.h  Message.h  Mqtt.h  Operation.h  RemoteUnlockTask.h  RunTime.h  Schedule.h  Sensor.h  State.h  Task.h  TaskList.h  TaskQueue.h  Vehicle.h  VehicleAuthTask.h  bcp_packet.h  channels.h  crc32.h  dep.h
tbox/src/tasks/: AcquireConfigTask.cpp  AcquireConfigTask.h  BCMessage.cpp  BCMessage.h  CollideNotify.cpp  CollideNotify.h  Element.cpp  Element.h  ErrorCode.h  GPSDataQueue.cpp  GPSDataQueue.h  GpsUploadTask.cpp  GpsUploadTask.h  MqttConnTask.cpp  MqttConnTask.h  PackageQueue.cpp  PackageQueue.h  PackageQueueTask.cpp  PackageQueueTask.h  RemoteControl.cpp  RemoteControl.h  RemoteUnlockTask.cpp  RemoteUnlockTask.h  RequestState.cpp  RequestState.h  StateUploadTask.cpp  StateUploadTask.h  TaskTable.cpp  TaskTable.h  VKeyActiveTask.cpp  VKeyActiveTask.h  VKeyDeactiveTask.cpp  VKeyDeactiveTask.h  VKeyIgnitionTask.cpp  VKeyIgnitionTask.h  VKeyUnIgnitTask.cpp  VKeyUnIgnitTask.h  VehicleAuthTask.cpp  VehicleAuthTask.h  VehicleShakeTask.cpp  (+1 more)
tbox/src/tasks/vis/: readme.txt  visGpsTask.cpp  visGpsTask.h
tbox/src/test/: ActiveTest.cpp  ActiveTest.h  RemoteUnlockTest.cpp  RemoteUnlockTest.h  VehicleAuthTest.h
